Fix horizontal scroll bar on desktop resolution.

--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -4,7 +4,7 @@
   justify-content: start;
   align-items: center;
   width: 100vw;
-  max-width: 100%;
+  max-width: 99vw;
   height: auto;
   /* border: 1px red solid; */
 }
