--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,8 @@
 body,
 html {
   height: 100%;
+  max-width: 100%;
+  margin: 0;
 }
 
 body {
